All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/Service_Order_Line__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>Service Order is used to plan, execute and manage Service events for Field and Depot Service activities. In ServiceMax, service orders can be used to manage the entire service delivery process, from creating estimates and quotations, to requesting and receiving parts, to recording usage/consumption, to closure and analysis.</description>
    <label>Work Detail</label>
    <nameField>
        <displayFormat>WL-{00000000}</displayFormat>
        <label>Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>