All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <description>Indicates the type of activity performed. Usually applicable for labor line types.</description>
    <inlineHelpText>Indicates the type of activity performed. Usually applicable for labor line types.</inlineHelpText>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Calibration</fullName>
            </value>
            <value>
                <fullName>Cleanup</fullName>
            </value>
            <value>
                <fullName>Installation</fullName>
            </value>
            <value>
                <fullName>Repair</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
                <default>true</default>
                <label>Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>