All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Actual_Price2__c.field-meta.xml
<CustomField>
    <fullName>Actual_Price2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Unit price for this line</description>
    <inlineHelpText>Unit price for this line</inlineHelpText>
    <label>Line Price Per Unit</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>