All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Billable_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Billable_Line_Price__c</fullName>
    <description>Total price for this parts/labor/expense/travel line considering discount% and covered%</description>
    <inlineHelpText>Total price for this parts/labor/expense/travel line</inlineHelpText>
    <label>Billable Line Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>