All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Billing_Information__c.field-meta.xml
<CustomField>
    <fullName>Billing_Information__c</fullName>
    <description>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</description>
    <inlineHelpText>States how &quot;Get Price&quot; functionality arrived with the billable line price for the line.</inlineHelpText>
    <label>Billing Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>