All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Closed_By__c.field-meta.xml
<CustomField>
    <fullName>Closed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that closed the service order line. This is set automatically when parts are received.</description>
    <inlineHelpText>User that closed the service order line. This is set automatically when parts are received.</inlineHelpText>
    <label>Closed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Service_Order_Line_Closed_By</relationshipName>
    <type>Lookup</type>
</CustomField>