All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Consumed_From_Location__c.field-meta.xml
<CustomField>
    <fullName>Consumed_From_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location from which inventory was consumed. Link to an existing site record in ServiceMax</description>
    <inlineHelpText>Location from which inventory was consumed. Link to an existing site record in ServiceMax</inlineHelpText>
    <label>Consumed From Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Service_Order_Line_Cons_Loc</relationshipName>
    <type>Lookup</type>
</CustomField>