All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <description>Date when this product was actually received (Last receipt date if multiple receipts are made)</description>
    <inlineHelpText>Date when this product was actually received. Use last receipt date if multiple receipts are made for the same request.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>