All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Dead_Time__c.field-meta.xml
<CustomField>
    <fullName>Dead_Time__c</fullName>
    <description>The time spent on non-service activities (In Minutes). Applies only on labor lines.</description>
    <label>Dead Time (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>