All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Entitlement_Notes__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Notes__c</fullName>
    <label>Entitlement Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>