All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Estimated_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Quantity2__c</fullName>
    <description>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</description>
    <inlineHelpText>Quantity of part, time or expenses to be used. This is context-sensitive. For example: Quantity for Travel expense might be 500 (miles)</inlineHelpText>
    <label>Estimated Qty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>