All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/From_Location__c.field-meta.xml
<CustomField>
    <fullName>From_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Source Location for which parts are requested</description>
    <inlineHelpText>From Location</inlineHelpText>
    <label>From Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Service_Order_Line_From_Loc</relationshipName>
    <type>Lookup</type>
</CustomField>