All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Include_in_Quote__c.field-meta.xml
<CustomField>
    <fullName>Include_in_Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</description>
    <inlineHelpText>Indicates if this expense is covered by a warranty/contract, or should be quoted to customer for approval</inlineHelpText>
    <label>Include in Quote</label>
    <type>Checkbox</type>
</CustomField>