All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Is_Billable__c.field-meta.xml
<CustomField>
    <fullName>Is_Billable__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates if this usage/consumption is billable to the customer</description>
    <inlineHelpText>Indicates if this usage/consumption is billable to the customer</inlineHelpText>
    <label>Is Billable</label>
    <type>Checkbox</type>
</CustomField>