All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Is_Entitlement_Performed__c.field-meta.xml
<CustomField>
    <fullName>Is_Entitlement_Performed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Entitlement Performed?</label>
    <type>Checkbox</type>
</CustomField>