All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Log_Against__c.field-meta.xml
<CustomField>
    <fullName>Log_Against__c</fullName>
    <description>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</description>
    <inlineHelpText>For internal accounting purposes, indicate if this expense/activity is tracked at the service group level or at the group member level</inlineHelpText>
    <label>Log Against</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Team</fullName>
            </value>
            <value>
                <fullName>Technician/Equipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>