All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</description>
    <inlineHelpText>Name of the product estimated, requested or used. Is a lookup to an existing salesforce product record</inlineHelpText>
    <label>Part</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Service_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>