All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Product_Warranty__c.field-meta.xml
<CustomField>
    <fullName>Product_Warranty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Warranty</label>
    <referenceTo>Warranty__c</referenceTo>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>