All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Quantity_Shipped2__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Shipped2__c</fullName>
    <description>For part requests, actual quantity shipped for the request.</description>
    <inlineHelpText>For part requests, actual quantity shipped for the request.</inlineHelpText>
    <label>Qty Shipped</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>