All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Received_City__c.field-meta.xml
<CustomField>
    <fullName>Received_City__c</fullName>
    <description>“City” part of the received location</description>
    <inlineHelpText>“City” part of the received location</inlineHelpText>
    <label>Received City</label>
    <length>100</length>
    <type>Text</type>
</CustomField>