All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Received_Location__c.field-meta.xml
<CustomField>
    <fullName>Received_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Received Location (Do Not Use)</description>
    <inlineHelpText>Received Location (Do Not Use)</inlineHelpText>
    <label>Received Location (Do Not Use)</label>
    <referenceTo>Service_Contract_Sites__c</referenceTo>
    <relationshipName>Work_Details_Received_Location</relationshipName>
    <type>Lookup</type>
</CustomField>