All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Received_State__c.field-meta.xml
<CustomField>
    <fullName>Received_State__c</fullName>
    <description>“State/Province” part of the received location</description>
    <inlineHelpText>“State/Province” part of the received location</inlineHelpText>
    <label>Received State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>