All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Received_Street__c.field-meta.xml
<CustomField>
    <fullName>Received_Street__c</fullName>
    <description>“Street” part of the received location</description>
    <inlineHelpText>“Street” part of the received location</inlineHelpText>
    <label>Received Street</label>
    <type>TextArea</type>
</CustomField>