All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Received_Zip__c.field-meta.xml
<CustomField>
    <fullName>Received_Zip__c</fullName>
    <description>“Zip/Postal code” part of the received location</description>
    <inlineHelpText>“Zip/Postal code” part of the received location</inlineHelpText>
    <label>Received Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>