All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Reference_Information__c.field-meta.xml
<CustomField>
    <fullName>Reference_Information__c</fullName>
    <description>Additional information about the work performed, or expense incurred (travel ticket # for example)</description>
    <inlineHelpText>Additional information about the work performed, or expense incurred (travel ticket # for example)</inlineHelpText>
    <label>Reference Information</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>