All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Requested_Location__c.field-meta.xml
<CustomField>
    <fullName>Requested_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Location from which parts are requested</description>
    <inlineHelpText>To Location</inlineHelpText>
    <label>To Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipName>Service_Order_Line_Req_Loc</relationshipName>
    <type>Lookup</type>
</CustomField>