All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Requested_Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Requested_Quantity2__c</fullName>
    <description>Number of units of this product required</description>
    <inlineHelpText>Number of units of this product required</inlineHelpText>
    <label>Requested Qty</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>