All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Requested_State__c.field-meta.xml
<CustomField>
    <fullName>Requested_State__c</fullName>
    <description>“State/Province” part of the requested location</description>
    <inlineHelpText>“State/Province” part of the requested location</inlineHelpText>
    <label>Requested State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>