All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Requested_Street__c.field-meta.xml
<CustomField>
    <fullName>Requested_Street__c</fullName>
    <description>“Street” part of the requested location</description>
    <inlineHelpText>“Street” part of the requested location</inlineHelpText>
    <label>Requested Street</label>
    <type>TextArea</type>
</CustomField>