All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Requested_Zip__c.field-meta.xml
<CustomField>
    <fullName>Requested_Zip__c</fullName>
    <description>“Zip/Postal code” part of the requested location</description>
    <inlineHelpText>“Zip/Postal code” part of the requested location</inlineHelpText>
    <label>Requested Zip</label>
    <length>100</length>
    <type>Text</type>
</CustomField>