All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Serial number of the part used. Reference to an existing installed product record in ServiceMax</description>
    <label>IB Serial Number</label>
    <referenceTo>Installed_Product__c</referenceTo>
    <relationshipName>Service_Order_Line</relationshipName>
    <type>Lookup</type>
</CustomField>