All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Service_Maintenance_Contract__c.field-meta.xml
<CustomField>
    <fullName>Service_Maintenance_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service/Maintenance Contract</label>
    <referenceTo>Service_Contract__c</referenceTo>
    <relationshipName>Work_Details</relationshipName>
    <type>Lookup</type>
</CustomField>