All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Service_Order__c.field-meta.xml
<CustomField>
    <fullName>Service_Order__c</fullName>
    <description>Service order number. Is a lookup to an existing service order in ServiceMax</description>
    <inlineHelpText>Service order number. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
    <label>Work Order</label>
    <referenceTo>Service_Order__c</referenceTo>
    <relationshipName>Service_Order_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>