All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Start_Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_and_Time__c</fullName>
    <description>Start date and time if the line type is Labor</description>
    <inlineHelpText>Start date and time if the line type is Labor</inlineHelpText>
    <label>Start Date and Time</label>
    <type>DateTime</type>
</CustomField>