All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Total_Estimated_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Price__c</fullName>
    <description>Total Estimated Price (Estimated quantity multiplied by estimated unit price)</description>
    <formula>IF(Billable_Quantity__c &gt; 0, Billable_Quantity__c * Estimated_Price2__c - (Discount__c*(Billable_Quantity__c * Estimated_Price2__c)), Estimated_Quantity2__c * Estimated_Price2__c - (Discount__c*(Estimated_Quantity2__c * Estimated_Price2__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Estimated Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>