All_Component_DX/force-app/main/default/objects/Service_Order_Line__c/fields/Total_Line_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Line_Price__c</fullName>
    <description>Total Line Price (Usage quantity multiplied by line&apos;s unit price)</description>
    <formula>IF(Billable_Quantity__c &gt; 0, Billable_Quantity__c * Actual_Price2__c - (Discount__c*(Billable_Quantity__c * Actual_Price2__c)), Actual_Quantity2__c * Actual_Price2__c - (Discount__c*(Actual_Quantity2__c * Actual_Price2__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>